<resources>
    <string name="app_name">Picture of the day</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="img_title">title</string>
    <string name="img_explanation">explanation</string>
    <string name="msg_loading">loading…</string>
    <string name="msg_linkisempty">Link is empty</string>
    <string name="str_prefix_error">Ошибка:</string>
    <string name="menu_1">Фото дня за предыдущие даты</string>
    <string name="menu_2">О программе</string>
    <string name="msg_like">Поставили лайк</string>
    <string name="settings_header">Настройки</string>
    <string name="txt_choice_theme">Тема приложения</string>
    <string name="txt_earth_theme">Земная</string>
    <string name="txt_moon_theme">Лунная</string>
    <string name="txt_mars_theme">Марсианская</string>
    <string name="msg_in_develop">функционал в разработке</string>
    <string name="about_prg">О программе</string>
    <string name="txt_about">Программа разработана в рамках курса Android. Material Design \n\nРазработчик: AndrewSkv</string>
    <string name="refresh">Обновить</string>
    <string name="write_to_develop">Написать разработчику</string>
    <string name="hint_message_to_developer">Сообщение</string>
    <string name="btn_send_message_to_developer_text">Отправить</string>
    <string name="menu_3">Мои заметки</string>
    <string name="notes_header">Мои заметки</string>
    <string name="note_title">Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка Заметка</string>
    <string name="note_date">01.01.01</string>
    <string name="btn_note_ok">OK</string>
    <string name="txt_btn_note_ok">OK</string>
    <string name="hint_txt_note">Текст заметки</string>
    <string name="btn_note_cancel">Отмена</string>
    <string name="description_header">Two Clusters and a Comet</string>
    <string name="description_body">This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus.\nIn telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May.</string>
</resources>
