<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundWindow"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/color_black"
        android:textSize="@dimen/settings_header_size"
        android:text="@string/settings_header" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/color_black"
        android:text="@string/txt_choice_theme"
        android:textSize="@dimen/settings_header_theme_size" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEarthTheme"
            style="@style/ChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_earth_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMoonTheme"
            style="@style/ChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_moon_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMarsTheme"
            style="@style/ChipChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_mars_theme" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
