<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/note_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_txt_note"
        android:gravity="start|top"
        app:layout_constraintBottom_toTopOf="@+id/btn_note_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_note_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_note_ok"
        android:layout_margin="@dimen/dialog_note_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btn_note_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_note_cancel"
        android:layout_margin="@dimen/dialog_note_btn_margin"
        app:layout_constraintStart_toEndOf="@+id/btn_note_ok"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>